deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pyflask-mini-deployment
  labels:
    app: pyflask-mini
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pyflask-mini
  template:
    metadata:
      labels:
        app: pyflask-mini
    spec:
      containers:
      - name: pyflask-mini
        image: zopar/pyflask-mini:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "0.25"
          limits:
            memory: "128Mi"
            cpu: "0.5"
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5 
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /ping
            port: 8080
            httpHeaders:
            - name: Custom-Header
              value: Ok
          initialDelaySeconds: 10
          periodSeconds: 3

---
apiVersion: v1
kind: Service
metadata:
  name: pyflask-mini
  labels:
    app: pyflask-mini
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: pyflask-mini

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-pyflask-mini
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: pyflask-mini
          servicePort: 8080
      - path: /ping
        backend:
          serviceName: pyflask-mini
          servicePort: 8080
